--- a/frontend/stylesheets/chai-template/pika-test/set-wells.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-wells.scss
@@ -275,7 +275,8 @@
   }
 }
 
-.pika-set-well-active{
+.pika-set-well-active, 
+.pika-exp-result-active{
   .modal-backdrop{
     background: transparent !important;
   }
