change left menu for PIKA and wifi issue

--- a/frontend/javascripts/app/views/experiment/left-menu.html
+++ b/frontend/javascripts/app/views/experiment/left-menu.html
@@ -73,10 +73,7 @@
         </div>
       </div>
       <div class="side-menu-menu-item">
-        <div class="XH3M" ui-sref="plate-layout({id: params.id})" toggle-sidemenu ng-if="exp.type != 'test_kit'">
-          <span>Well Layout</span>
-        </div>
-        <div class="XH3M" ui-sref="pika_test.setWellsA({id: params.id})" toggle-sidemenu ng-if="exp.type == 'test_kit'">
+        <div class="XH3M" ui-sref="plate-layout({id: params.id})" toggle-sidemenu>
           <span>Well Layout</span>
         </div>
       </div>
