--- a/frontend/javascripts/dynexp/pika_test/views/v2/set-wells.html
+++ b/frontend/javascripts/dynexp/pika_test/views/v2/set-wells.html
@@ -21,8 +21,8 @@
           <section class="well-container">
             <div class="well-panel">
               <div class="d-flex">
-                <h1 class="CH1">{{ target.name }}</h1>
-                <h1 class="CH1" ng-if="is_two_kit">{{ target2.name ? target2.name : ''}}</h1>
+                <h1 class="CH1">{{ targets[0].name }}</h1>
+                <h1 class="CH1" ng-if="is_two_kit">{{ targets[1].name ? targets[1].name : ''}}</h1>
               </div>
               <div class="d-flex mt-20">
                 <div class="well-table">
@@ -45,8 +45,8 @@
                       ng-focus="focusWell('A', $index, x.name)"
                       ng-if="!isControlWell(x, $index, 'A')"
                       >
-                    <label class="CG1 type" ng-class="{'positive': x.name == 'Positive Control', 'negative': x.name == 'Negative Control', 'available': x.name}">
-                      {{(x.name == 'Positive Control') ? '+' : ( (x.name == 'Negative Control') ? '-' : 'S' )}}
+                    <label class="CG1 type" ng-class="{'positive': well_types[$index] == 'positive_control', 'negative': well_types[$index] == 'negative_control', 'available': x.name}">
+                      {{(well_types[$index] == 'positive_control') ? '+' : ( (well_types[$index] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                     <img src="/images/dynexp/pika-test/note-disable.svg" class="note" ng-if="!x.name"/>
                     <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'A'+$index}}" ng-if="x.id && x.notes" ng-click="openNotes($index, x, 'A')"/>
@@ -73,8 +73,8 @@
                       ng-focus="focusWell('B', $index, x.name)"
                       ng-if="!isControlWell(x, $index, 'B')"
                       >
-                    <label class="CG1 type" ng-class="{'positive': x.name == 'Positive Control', 'negative': x.name == 'Negative Control', 'available': x.name}">
-                      {{(x.name == 'Positive Control') ? '+' : ( (x.name == 'Negative Control') ? '-' : 'S' )}}
+                    <label class="CG1 type" ng-class="{'positive': well_types[$index + 8] == 'positive_control', 'negative': well_types[$index + 8] == 'negative_control', 'available': x.name}">
+                      {{(well_types[$index + 8] == 'positive_control') ? '+' : ( (well_types[$index + 8] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                     <img src="/images/dynexp/pika-test/note-disable.svg" class="note" ng-if="!x.name"/>
                     <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'B'+$index}}" ng-if="x.id && x.notes" ng-click="openNotes($index, x, 'B')"/>
@@ -94,16 +94,26 @@
                 <tr>
                   <td class="map-row-header CG1">A</td>
                   <td class="CG2" ng-repeat="x in samples track by $index">
-                    <label class="CG1 type" ng-class="{'positive': x.name == 'Positive Control', 'negative': x.name == 'Negative Control', 'available': x.name, 'active': (current_well_index == $index && current_well_row == 'A')}">
-                      {{(x.name == 'Positive Control') ? '+' : ( (x.name == 'Negative Control') ? '-' : 'S' )}}
+                    <label class="CG1 type" 
+                      ng-class="{
+                        'positive': well_types[$index] == 'positive_control', 
+                        'negative': well_types[$index] == 'negative_control', 
+                        'available': x.name,
+                        'active': (current_well_index == $index && current_well_row == 'A')}">
+                      {{(well_types[$index] == 'positive_control') ? '+' : ( (well_types[$index] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                   </td>
                 </tr>
                 <tr>
                   <td class="map-row-header CG1">B</td>
                   <td class="CG2" ng-repeat="x in samples_B track by $index">
-                    <label class="CG1 type" ng-class="{'positive': x.name == 'Positive Control', 'negative': x.name == 'Negative Control', 'available': x.name, 'active': (current_well_index == $index && current_well_row == 'B')}">
-                      {{(x.name == 'Positive Control') ? '+' : ( (x.name == 'Negative Control') ? '-' : 'S' )}}
+                    <label class="CG1 type" 
+                      ng-class="{
+                        'positive': well_types[$index] == 'positive_control', 
+                        'negative': well_types[$index] == 'negative_control', 
+                        'available': x.name,
+                        'active': (current_well_index == $index && current_well_row == 'B')}">
+                      {{(well_types[$index] == 'positive_control') ? '+' : ( (well_types[$index] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                   </td>
                 </tr>
