--- a/frontend/javascripts/app/views/directives/v2/side-left-menu.html
+++ b/frontend/javascripts/app/views/directives/v2/side-left-menu.html
@@ -128,7 +128,7 @@
         ng-class="{
           'disabled-link': status == 'NOT_STARTED', 
           'active': stateInfo.name == 'run-experiment' && params.chart == 'temperature-logs'}">
-        <div class="CH1-M" ui-sref="run-experiment({id: params.id, chart: 'temperature-logs'})" toggle-sidemenu ng-if="status != 'NOT_STARTED'">
+        <div class="CH1-M" ui-sref="run-experiment({id: params.id, chart: 'temperature-logs'})" toggle-sidemenu ng-if="status && status != 'NOT_STARTED'">
           <span>Thermal Profile</span>
         </div>
         <div class="CH1-M" ng-if="status == 'NOT_STARTED'">
