add chai test kit

--- a/frontend/javascripts/app/views/directives/v2/inline-exp-name-editor.html
+++ b/frontend/javascripts/app/views/directives/v2/inline-exp-name-editor.html
@@ -23,7 +23,7 @@
       <input 
         type="text"
         class="CH1 mr-10"
-        id="exp_name_field"
+        id="inline_exp_name_field"
         ng-change="adjustTextWidth()"
         ng-model="experiment.name"         
         focus-on="editExpNameMode">
