--- a/frontend/stylesheets/chai-template/fonts.scss
+++ b/frontend/stylesheets/chai-template/fonts.scss
@@ -149,6 +149,12 @@
     line-height: 28px;
   }
 
+  .CX3-B{
+    font-family: 'DINOT--Bold', Arial, sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
   .CX3-M{
     font-family: 'DINOT--Medium', Arial, sans-serif;
     font-size: 20px;
@@ -159,5 +165,17 @@
     font-family: 'DINOT--Regular', Arial, sans-serif;
     font-size: 18px;
     line-height: 20px;
+  }
+
+  .CX5{
+    font-family: 'DINOT--Regular', Arial, sans-serif;
+    font-size: 15px;
+    line-height: 22px;
+  }
+
+  .CX5-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 15px;
+    line-height: 22px;
   }
 }
