--- a/frontend/stylesheets/chai-template/pika-test/set-wells.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-wells.scss
@@ -27,7 +27,7 @@
         padding: 20px 40px;
         overflow-x: hidden;
         overflow-y: auto;
-        height: calc(100vh - 350px);
+        height: calc(100vh - 310px);
         box-shadow: 1px 1px 1px $section-border-color;
 
         h1{
@@ -102,8 +102,8 @@
         }
       }
       .well-command{
-        padding: 30px 80px;
-        height: 150px;
+        padding: 25px 80px 20px;
+        height: 130px;
         display: flex;
         justify-content: space-between;
         align-items: center;
