--- a/frontend/javascripts/dynexp/pika_test/views/v2/set-wells.html
+++ b/frontend/javascripts/dynexp/pika_test/views/v2/set-wells.html
@@ -21,7 +21,7 @@
           <section class="well-container">
             <div class="well-panel">
               <div class="d-flex">
-                <h1 class="CH1">{{ targets[0].name }}</h1>
+                <h1 class="CH1">{{ target1_name ? target1_name : targets[0].name }}</h1>
                 <h1 class="CH1" ng-if="is_two_kit">{{ targets[1].name ? targets[1].name : ''}}</h1>
               </div>
               <div class="d-flex mt-20">
@@ -49,7 +49,7 @@
                       {{(well_types[$index] == 'positive_control') ? '+' : ( (well_types[$index] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                     <img src="/images/dynexp/pika-test/note-disable.svg" class="note" ng-if="!x.name"/>
-                    <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'A'+$index}}" ng-if="x.id && x.notes" ng-click="openNotes($index, x, 'A')"/>
+                    <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'A'+$index}}" ng-if="x.name && x.notes" ng-click="openNotes($index, x, 'A')"/>
                     <img src="/images/dynexp/pika-test/note-off.svg" class="note cursor-pointer note-{{'A'+$index}}" ng-if="x.name && !x.notes" ng-click="openNotes($index, x, 'A')"/>
                   </div>
                 </div>
@@ -77,7 +77,7 @@
                       {{(well_types[$index + 8] == 'positive_control') ? '+' : ( (well_types[$index + 8] == 'negative_control') ? '-' : 'S' )}}
                     </label>
                     <img src="/images/dynexp/pika-test/note-disable.svg" class="note" ng-if="!x.name"/>
-                    <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'B'+$index}}" ng-if="x.id && x.notes" ng-click="openNotes($index, x, 'B')"/>
+                    <img src="/images/dynexp/pika-test/note-on.svg" class="note cursor-pointer note-{{'B'+$index}}" ng-if="x.name && x.notes" ng-click="openNotes($index, x, 'B')"/>
                     <img src="/images/dynexp/pika-test/note-off.svg" class="note cursor-pointer note-{{'B'+$index}}" ng-if="x.name && !x.notes" ng-click="openNotes($index, x, 'B')"/>
                   </div>
                 </div>
@@ -118,7 +118,7 @@
                   </td>
                 </tr>
               </table>
-              <div class="control-check">
+              <div class="control-check" ng-if="is_omittable">
                 <div class="well-check CB2-M">
                   <label ng-click="omitPositive()"><img src="/images/omit_check.svg" ng-show="omit_positive"></label>Omit Positive Control
                 </div>
@@ -129,7 +129,7 @@
                   <p class="CB2">In order to call a positive sample, it is necessary for one well to return a valid negative result. Without this, we cannot conclude that positive results are real, and not the result of PCR contamination. <br/><br/>The negative control should only be omitted if you expect at least one negative result, i.e. you are running a high number of samples and expect most will be negative.</p>
                 </div>
               </div>
-              <div class="control-check">
+              <div class="control-check" ng-if="is_omittable">
                 <div class="well-check CB2-M">
                   <label ng-click="omitNegative()"><img src="/images/omit_check.svg" ng-show="omit_negative"></label>Omit Negative Control
                 </div>
