--- a/frontend/stylesheets/chai-template/variables.scss
+++ b/frontend/stylesheets/chai-template/variables.scss
@@ -2,6 +2,7 @@
 $white: #ffffff;
 $black: #000;
 $red: red;
+$gray: #777;
 
 // Set Wells Page
 $section-border-color: rgba(0,0,0,0.16);
@@ -12,3 +13,7 @@ $well-number-color: #BFBFBF;
 $text-cursor-color: #00CEFF;
 $link-text-color: #DF2025;
 $minimap-color: #676767;
+$btn-disable-color: #BFBFBF;
+$btn-active-color: #DF2025;
+$btn-active-color: #DF2025;
+$line-select-color: #00B0F1;
