add chai-mode in web-app

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -8,11 +8,7 @@
   <script type="text/javascript" src="/javascripts/application-debug.js"></script>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-  <div id="container" class="container-fluid">
+<body class="chai-mode">
     <%= yield %>
-  </div>
-
 </body>
 </html>
