--- a/frontend/javascripts/app/views/directives/v2/header-exp-status.html
+++ b/frontend/javascripts/app/views/directives/v2/header-exp-status.html
@@ -11,7 +11,7 @@
     <!-- begin is valid -->
     <div class="left-content">
       <div class="menu" ng-transclude></div>
-      <div class="exp-name CH1" title="{{experiment.name|uppercase}}">{{expName(50)}}</div>
+      <div class="exp-name CH1" title="{{experiment.name}}">{{experiment.name}}</div>
     </div>
 
     <!-- begin is invalid LID IS OPEN -->
