--- a/frontend/stylesheets/chai-template/variables.scss
+++ b/frontend/stylesheets/chai-template/variables.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $black: #000;
 $red: red;
 $gray: #777;
+$dark-gray: #333;
 
 // Set Wells Page
 $section-border-color: rgba(0,0,0,0.16);
