--- a/frontend/javascripts/app/views/directives/v2/inline-exp-name-editor.html
+++ b/frontend/javascripts/app/views/directives/v2/inline-exp-name-editor.html
@@ -18,7 +18,7 @@
 -->
 <div class="inline-exp-name CH1">
   <form name="expForm">
-    <span class="CH1 mr-10" ng-class="{'hide-elem': editExpNameMode}" id="exp_name_plat">{{experiment.name}}</span>
+    <span class="CH1 mr-10" ng-class="{'hide-elem': editExpNameMode}" id="inline_exp_name_plat">{{experiment.name}}</span>
     <div class="exp-name-field" data-error="{{errors}}" ng-show="editExpNameMode">
       <input 
         type="text"
