--- a/frontend/stylesheets/chai-template/directives/header-exp-status.scss
+++ b/frontend/stylesheets/chai-template/directives/header-exp-status.scss
@@ -3,6 +3,22 @@
   // Header Exp Status Style
 .chai-mode{
   .header-exp-status{
+    &.standard-exp{
+      .header-bar{
+        background: $dark-gray;
+        &.in-progress {
+          background: -moz-linear-gradient(left, #64b027 0%, #c6e35f 46%, #5d8329 46%, #5d8329 100%);
+          /* FF3.6-15 */
+          background: -webkit-linear-gradient(left, #64b027 0%, #c6e35f 46%, #5d8329 46%, #5d8329 100%);
+          /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(to right, #64b027 0%, #c6e35f 46%, #5d8329 46%, #5d8329 100%);
+          /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        }
+        &.complete {
+          background-image: url('/images/header-complete.png');
+        }      
+      }
+    }
     .header-bar{
       background: $black;
       height: 60px;
@@ -18,6 +34,13 @@
         height: 60px;
         justify-content: flex-start;
         align-items: center;
+        max-width: 55%;
+
+        .exp-name{
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }        
       }
 
       .right-content{
@@ -25,6 +48,26 @@
         height: 60px;
         justify-content: flex-start;
         align-items: center;
+
+        .button-header{
+          background: $dark-gray;
+          border: 1px solid;
+          border-radius: 2px;
+          padding: 3px 0 5px;
+          width: 175px;
+          text-align: center;
+          cursor: pointer;
+        }
+
+        .button-he{
+          background: #8dc63f;
+          border: 1px solid;
+          border-radius: 2px;
+          padding: 3px 0 5px;
+          width: 175px;
+          text-align: center;
+          cursor: pointer;
+        }
       }
 
       .failed{
@@ -57,6 +100,7 @@
       line-height: 26px;
       padding: 0 10px 0 5px;
       cursor: pointer;
+      width: 152px;
 
       img{
         height: 24px;
